admission/ValidatingAdmissionPolicy/policies/prestop-tcpsocket-host/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prestop-tcpsocket-host-containers
  annotations:
    kubeapt.io/uuid: "6a266584-351e-4543-a289-2860d9ae3296"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    lifecycle:
      preStop:
        tcpSocket:
          port: 80
          host: 127.0.0.1
